test/Common/standalone/InvalidEhFrame/Inputs/invalid-eh-frame.s
.section .eh_frame, "a"
  .byte 0x04
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
  .byte 0x00
